kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backup-restore-app-service
spec:
  selector:
    app: backup-restore-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
